// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HashMap renders array value 1`] = `
<dl
  class="css-1mqjlka"
  data-cy="configurationMapSection"
>
  <div
    class="css-td53qz"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-1bnt6tn"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-1pld8at"
      data-cy="configurationMapValue"
    >
      foo, bar, baz
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders boolean value 1`] = `
<dl
  class="css-1mqjlka"
  data-cy="configurationMapSection"
>
  <div
    class="css-td53qz"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-1bnt6tn"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-1pld8at"
      data-cy="configurationMapValue"
    >
      true
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders default 1`] = `
<dl
  class="css-1mqjlka"
  data-cy="configurationMapSection"
>
  <div
    class="css-td53qz"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-1bnt6tn"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-1pld8at"
      data-cy="configurationMapValue"
    >
      bar
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders empty value 1`] = `
<dl
  class="css-1mqjlka"
  data-cy="configurationMapSection"
>
  <div
    class="css-td53qz"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-1bnt6tn"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-1pld8at"
      data-cy="configurationMapValue"
    >
      empty
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders with a headline 1`] = `
<dl
  class="css-1mqjlka"
  data-cy="configurationMapSection"
>
  <h1
    class="css-14una7e"
    data-cy="configurationMapHeading"
  >
    baz
  </h1>
  <div
    class="css-td53qz"
    data-cy="configurationMapRow"
  >
    <dt
      class="css-1bnt6tn"
      data-cy="configurationMapLabel"
    >
      foo
    </dt>
    <dd
      class="css-1pld8at"
      data-cy="configurationMapValue"
    >
      bar
    </dd>
  </div>
</dl>
`;

exports[`HashMap renders with nested object hash 1`] = `
<dl
  class="css-1mqjlka"
  data-cy="configurationMapSection"
>
  <dl
    class="css-1mqjlka"
    data-cy="configurationMapSection"
  >
    <h2
      class="css-14una7e"
      data-cy="configurationMapHeading"
    >
      foo
    </h2>
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        bar
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        baz
      </dd>
    </div>
  </dl>
</dl>
`;
